# learning-flask-lp3

./: produtos.csv  pyproject.toml
alice/: app.py
alice/static/: reposicao.css  style2.css
alice/templates/: base.html  base2.html  cadastro-produto.html  produto.html  produtos.html  validar-cnpj.html  validar-cpf.html
