[tool.poetry]
name = "alice"
version = "0.1.0"
description = ""
authors = ["LiceeIF <alice.maria@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
validate-docbr = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
